can now finally create employers and save it to mongo
